After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 704625 - Cannot assign a ClutterContent to a stage
Cannot assign a ClutterContent to a stage
Status: RESOLVED FIXED
Product: clutter
Classification: Platform
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: clutter-maint
clutter-maint
Depends on:
Blocks:
 
 
Reported: 2013-07-20 23:56 UTC by Emmanuele Bassi (:ebassi)
Modified: 2013-08-19 23:27 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
paint-nodes: Remove modelview from ClutterRootNode (3.32 KB, patch)
2013-07-20 23:56 UTC, Emmanuele Bassi (:ebassi)
committed Details | Review
Use paint nodes to set up the stage (6.47 KB, patch)
2013-07-20 23:57 UTC, Emmanuele Bassi (:ebassi)
committed Details | Review

Description Emmanuele Bassi (:ebassi) 2013-07-20 23:56:42 UTC
The ClutterStage::paint implementation overrides everything in order to clear the framebuffer; so, we actually paint the backgr
ound color and any eventual content, then we clear it with the background color again, and then we traverse the children of the
 stage.

We should be using the (private) ClutterRootNode that was added in 1.12 instead. We cannot override ClutterActor::paint_node(), because that is called after the background and content have been added to the local root node; instead, we need to special-case the top-level actors inside clutter_actor_paint_node().
Comment 1 Emmanuele Bassi (:ebassi) 2013-07-20 23:56:49 UTC
Created attachment 249726 [details] [review]
paint-nodes: Remove modelview from ClutterRootNode

It's pointless, since RootNode sits at the top and there's no modelview
to be set.
Comment 2 Emmanuele Bassi (:ebassi) 2013-07-20 23:57:03 UTC
Created attachment 249727 [details] [review]
Use paint nodes to set up the stage

This allows to set a Content on a stage, and consolidates the paint
code where it belongs.