paint-nodes: Remove modelview from ClutterRootNode

It's pointless, since RootNode sits at the top and there's no modelview
to be set.

https://bugzilla.gnome.org/show_bug.cgi?id=704625